# genetic_xgb

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: review-dropin.md
.claude/workflows/: review-dropin.mjs
.githooks/: pre-push
.github/workflows/: ci.yml
examples/: demo_classification.ipynb  demo_regression.ipynb
src/genetic_xgb/: __init__.py  estimators.py  feature_selection.py  history.py  member.py  metrics.py  search_space.py  strategy.py  trainer.py
src/pbt_xgb/: __init__.py  executor.py  history.py  member.py  metrics.py  pbt.py  search_space.py  strategy.py  trainer.py
tests/: conftest.py  test_classifier.py  test_executor.py  test_feature_selection.py  test_history.py  test_member.py  test_metrics.py  test_pbt.py  test_regressor.py  test_search_space.py  test_strategy.py  test_trainer.py
